# atom

./: .commitlintrc.yaml  .env.example  .gitignore  .gitlab-ci.yml  .goreleaser.yaml  .goreleaser.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  RUNBOOK.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  go.work  go.work.sum  pyproject.toml
agentarmor/: config.yaml
agentscope-studio/: .gitignore  CONTRIBUTING_zh.md  LICENSE  pyproject.toml  studio_stub.py
alloy/: config.alloy
atom-cli/: go.mod  go.sum
atom-llm/: Dockerfile  Dockerfile.dev  UPSTREAM_DIFF.md  config.dev.yaml  entrypoint.dev.sh  main.py
atom-memory/: UPSTREAM_DIFF.md
atom-memory/memory/: pyproject.toml
atom-memory/memory/src/atom_memory/: manager.py
atom-memory/memory/src/atom_memory/backends/: __init__.py  pgvector_backend.py  redis_backend.py
atom-memory/memory/tests/: conftest.py  test_memory.py
atom-runtime/: UPSTREAM_DIFF.md
atom-runtime/runtime/: Dockerfile  pyproject.toml
atom-runtime/runtime/src/atom_runtime/: config.py  database.py  deploy_webhook.py  docker_backend.py  k8s_client.py  main.py  manifest_builder.py
atom-runtime/runtime/tests/: conftest.py  test_runtime.py
atom-sdk/: .gitlab-ci.yml  .registry  Dockerfile  README.md  UPSTREAM_DIFF.md
atom-sdk/atom_platform_sdk/: README.md  __init__.py  core.py  pyproject.toml
atom-studio/: UPSTREAM_DIFF.md
atom-studio/backend/: Dockerfile  pyproject.toml
atom-studio/backend/src/atom_studio/: config.py  database.py  kafka_producer.py  main.py  redis_client.py
atom-studio/backend/src/atom_studio/agents/: router.py  service.py
atom-studio/backend/src/atom_studio/audit/: router.py
atom-studio/backend/src/atom_studio/auth/: middleware.py  router.py  service.py  users_router.py
atom-studio/backend/src/atom_studio/builder/: router.py
atom-studio/backend/src/atom_studio/deployments/: router.py  service.py
atom-studio/backend/src/atom_studio/domains/: router.py  service.py
atom-studio/backend/src/atom_studio/hitl/: router.py  service.py
atom-studio/backend/src/atom_studio/runs/: router.py
atom-studio/backend/src/atom_studio/services/: ai.py  builder.py  builder_conversation.py  builder_deploy.py  gitlab_service.py
atom-studio/backend/src/atom_studio/skills/: router.py
atom-studio/backend/src/atom_studio/tools/: router.py
atom-studio/backend/src/atom_studio/ws/: emit_agent_log.py  log_broadcaster.py  manager.py  router.py  run_broadcaster.py
atom-studio/backend/src/tests/: conftest.py  test_agents.py  test_auth.py  test_deployments.py  test_domains.py  test_hitl.py
builder-backend/: Dockerfile  main.py  requirements.txt
cli/: atom.py  mphasis.py  setup.py
decisions/: ADR-007-agentscope-fork.md  ADR-009-kafka.md  ADR-010-minio.md  ADR-013-agent-routing.md  ADR-014-hitl-hiclaw.md  ADR-015-atom-studio.md
docs/: CI_BUILD.md  DEVELOPER_GUIDE.md  RUNBOOK.md  SECURITY.md  SETUP.md  architecture.md  demo-runbook.md  guardrail-test-runbook.md  identity-and-audit.md  kafka-schemas.md  qa-prep.md  vab-demo-runbook.md  workflow-spec-format.md
examples/: README.md  provision.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gate/: Dockerfile  agent_invoke.go  audit.go  config.go  db.go  gate_test.go  go.mod  go.sum  identity.go  llm_proxy.go  main.go  middleware.go  proxy.go
litellm/: config.yaml
loki/: config.yaml
migrations/: 000001_users_domains.down.sql  000001_users_domains.up.sql  000002_agents_tokens.down.sql  000002_agents_tokens.up.sql  000003_policies_tools_skills.down.sql  000003_policies_tools_skills.up.sql  000004_memory_configs.down.sql  000004_memory_configs.up.sql  000005_audit_chain.down.sql  000005_audit_chain.up.sql  000006_deployments_hitl.down.sql  000006_deployments_hitl.up.sql  000007_memory_vectors.down.sql  000007_memory_vectors.up.sql  000008_litellm_ids.down.sql  000008_litellm_ids.up.sql  000009_agent_config.down.sql  (+13 more)
(+511 files in other folders)
