[project]
name = "atom-memory"
version = "0.1.0"
description = "ATOM memory backends — pgvector long-term + Redis short-term"
requires-python = ">=3.11"

dependencies = [
    "asyncpg>=0.29.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis[aioredis]>=2.20.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atom_memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = ["integration: tests that require live Postgres and Redis"]
