[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atom-platform-sdk"
version = "0.1.0"
description = "ATOM AI Governance Platform — Agent SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["ai-agents", "llm", "governance", "bfsi", "atom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core agentscope (from our fork or upstream when identical)
    "agentscope>=0.1.0",
    # ATOM extras
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff"]

[project.urls]
Homepage = "https://github.com/shreyasY2k/atom"
Documentation = "https://github.com/shreyasY2k/atom/blob/main/docs/DEVELOPER_GUIDE.md"
Issues = "https://github.com/shreyasY2k/atom/issues"

[tool.hatch.build.targets.wheel]
# Include the ATOM-specific model + extensions alongside agentscope
packages = ["atom_platform_sdk"]
